[OpenNeuro] Recorded changes

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.0 2023-09-25
+  - Missing and incorrect meta-information has been updated.
 1.0.0 2023-09-25
   - Initial upload
 0.0.1  Initial data acquired
