--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,5 @@
+1.1.1 2023-09-26
+  - BIDS Error has been corrected
 1.1.0 2023-09-25
   - Missing and incorrect meta-information has been updated.
 1.0.0 2023-09-25
